engines specify modules to use, library background color

--- a/src/less/console.less
+++ b/src/less/console.less
@@ -26,8 +26,8 @@
 		white-space: nowrap;
 
 		>.btn-close {
-			.ui-button();
-
+            .ui-button-sphere();
+            
 			width: 20px;
 			height: 20px;
 			vertical-align: top;
