--- a/src/less/imports.less
+++ b/src/less/imports.less
@@ -1,5 +1,5 @@
 @import "variables";
-@import "classes";
+@import "../includes/blanke-kit/blanke-ui";
 
 @font-face {
     font-family: "Inconsolata";
