--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -5,7 +5,7 @@
 		position: absolute;
 		bottom: 0px;
 	    max-width: 100%;
-	    opacity: 0.2;
+	    /*opacity: 0.2;*/
 	    z-index: @library-z-middle;
 	    margin-bottom: 17px;
 	    margin-left: 1px;
