--- a/src/less/library.less
+++ b/src/less/library.less
@@ -22,7 +22,7 @@ body{
     bottom: 0px;
     left: 0px;
     background-color: #ffffff;
-    box-shadow: 1px 0px 5px black;
+    /*box-shadow: 1px 0px 5px black;*/
     z-index: 20;
     overflow: hidden;
 
@@ -36,7 +36,7 @@ body{
     	z-index: @library-z-front;
 
     	button {
-    		.ui-button();
+    		.ui-button-sphere();
     		.win-nodrag();
 		}
 
@@ -105,7 +105,7 @@ body{
 
 			transition: background-color ease-in-out 0.1s;
 			transition: outline-color ease-in-out 0.5s;
-}
+		}
 
 		.folder,.object{
 			position: relative;
@@ -142,7 +142,7 @@ body{
 			}
 
 			.btn-delete-obj {
-    			.ui-button();
+    			.ui-button-sphere();
 
     			position: absolute;
     			top: 0px;
