--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -20,8 +20,8 @@ body{
     top: 0px;
     right: 0px;
     height: auto;
-    padding: 3px 5px;
-    margin: 1px;
+    padding: 0px 2px;
+    margin: 3px;
     z-index: @ide-z-front;
     
     transition: all ease-in-out 0.2s;
@@ -33,7 +33,7 @@ body{
         display: inline-block;
 
         button {
-            .ui-button();
+            .ui-button-sphere();
         }
     }
 
@@ -44,7 +44,7 @@ body{
         margin-left: 20px;
 
         button {
-            .ui-button();
+            .ui-button-sphere();
         }
     }
 
@@ -57,7 +57,7 @@ body{
     	right: 5px;
 
     	button {
-    		.ui-button();
+            .ui-button-sphere();
     		vertical-align: top;
 
 		    &:hover {
