--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -18,15 +18,16 @@
 	    text-align: center;
 
     	.category {
-    		.ui-text-button();
+    		.ui-button-rect();
 
     		font-size: 18px;
 		    width: 100%;
 		    height: 36px;
+            margin: 0px;
     	}
 
     	.btn-close {
-    		.ui-text-button();
+    		.ui-button-rect();
 
     		position: absolute;
 		    bottom: 0px;
