--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -164,6 +164,19 @@
     }
 }
 
+.ui-file {
+    > input {
+        margin-left: 10px;
+        border: 1px solid gray;
+        border-radius: 4px;
+        outline: none;
+    }
+
+    > label {
+        margin-left: 10px;
+    }
+}
+
 .ui-input-group {
     label {
         margin-right: 20px;
