--- a/src/less/library.less
+++ b/src/less/library.less
@@ -97,8 +97,7 @@ body{
 		}
 
 		>.name {
-			//height: 100%;
-					position: relative;
+			position: relative;
 			cursor: default;
 			outline: 1.5px dashed;
 			outline-color: transparent;
@@ -130,6 +129,7 @@ body{
 			}
 
 			.name {
+				.no-select();
 				padding: 4px;
 
 				&:hover {
