--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -45,6 +45,7 @@
     .inputs-container {
     	display: inline-block;
         white-space: normal;
+        max-width: 75%;
 
     	.subcategory {
 		    font-size: 20px;
