--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -43,9 +43,12 @@
     }
 
     .inputs-container {
-    	display: inline-block;
+        display: inline-block;
         white-space: normal;
-        max-width: 75%;
+        max-width: 100%;
+        max-height: 100%;
+        overflow-y: auto;
+        margin-right: 204px;
 
     	.subcategory {
 		    font-size: 20px;
