--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -2,13 +2,12 @@
 
 .library {
 	.img-hover {
-		position: absolute;
+		position: fixed;
 		bottom: 0px;
 	    max-width: 100%;
 	    /*opacity: 0.2;*/
-	    z-index: @library-z-middle;
-	    margin-bottom: 17px;
-	    margin-left: 1px;
+	    z-index: @library-z-back;
+	    margin: 3px;
 	    border: 1px solid @ide-fave-color-400;
 	}
 }
