--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -30,7 +30,7 @@
 */
 @button-transition-speed: 0.4s;
 
-.ui-group-button {
+.ui-btn-group {
     cursor: default;
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 4px;
@@ -43,8 +43,10 @@
     border: none !important;
     outline: none;
     background-color: transparent;
-    font-size: 15px;
+    font-size: 12px;
     cursor: pointer;
+    /*height: @button-width;
+    width: @button-height;*/
 
     transition: all ease-in-out @button-transition-speed;
 
@@ -62,8 +64,6 @@
     .ui-button();
     
     padding: 0px;
-    height: 30px;
-    width: 30px;
 
     &:hover {
         border-radius: 100%;
@@ -108,7 +108,8 @@
 .ui-checkbox {
     .win-nodrag();
 
-    height: 30px;
+    /*width: @button-width;
+    height: @button-height;*/
     margin: 3px;
     display: inline-block;
     vertical-align: top;
@@ -150,9 +151,9 @@
         border: 1px solid black;
         border-radius: 2px;
         margin: 0px;
-        width: 30px;
-        height: 30px;
-        padding: 6px;
+        /*width: @button-width;
+        height: @button-height;*/
+        padding: 2px;
         background-color: transparent;
         box-sizing: border-box;
 
