--- a/src/main.css
+++ b/src/main.css
@@ -30,7 +30,7 @@
 /*
     BUTTONS
 */
-.ui-group-button {
+.ui-btn-group {
   cursor: default;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 4px;
@@ -53,8 +53,10 @@
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
 }
 .ui-button:hover {
@@ -82,12 +84,12 @@
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
 }
 .ui-button-sphere:hover {
   background-color: #e0e0e0;
@@ -116,7 +118,9 @@
   margin: 3px;
   border: none !important;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
+  /*height: @button-width;
+    width: @button-height;*/
   padding: 5px 10px;
   background-color: white;
   border: none;
@@ -153,7 +157,8 @@
 }
 .ui-checkbox {
   -webkit-app-region: no-drag;
-  height: 30px;
+  /*width: @button-width;
+    height: @button-height;*/
   margin: 3px;
   display: inline-block;
   vertical-align: top;
@@ -191,9 +196,9 @@
   border: 1px solid black;
   border-radius: 2px;
   margin: 0px;
-  width: 30px;
-  height: 30px;
-  padding: 6px;
+  /*width: @button-width;
+        height: @button-height;*/
+  padding: 2px;
   background-color: transparent;
   box-sizing: border-box;
   transition: all ease-in-out 0.2s;
@@ -262,10 +267,14 @@ body[project-open="1"] .titlebar {
   top: 0px;
   right: 0px;
   height: auto;
-  padding: 0px 2px;
+  padding: 0px;
   margin: 3px;
   z-index: 20;
   transition: all ease-in-out 0.2s;
+}
+.titlebar button {
+  width: 22px;
+  height: 22px;
 }
 .titlebar .actionbuttons {
   -webkit-app-region: no-drag;
@@ -290,12 +299,12 @@ body[project-open="1"] .titlebar {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
 }
 .titlebar .actionbuttons button:hover {
   background-color: #e0e0e0;
@@ -330,12 +339,12 @@ body[project-open="1"] .titlebar {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
 }
 .titlebar .gamebuttons button:hover {
   background-color: #e0e0e0;
@@ -351,8 +360,8 @@ body[project-open="1"] .titlebar {
   -webkit-app-region: no-drag;
   white-space: nowrap;
   position: absolute;
-  top: 3px;
-  right: 5px;
+  top: 0px;
+  right: 0px;
 }
 .titlebar .titlebuttons button {
   -webkit-touch-callout: none;
@@ -372,12 +381,12 @@ body[project-open="1"] .titlebar {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
   vertical-align: top;
 }
 .titlebar .titlebuttons button:hover {
@@ -429,6 +438,7 @@ body[project-open="1"] .library {
   user-select: none;
   /* Non-prefixed version, currently
     not supported by any browser */
+  margin: 3px;
   white-space: nowrap;
   z-index: 10;
 }
@@ -450,13 +460,15 @@ body[project-open="1"] .library {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
   -webkit-app-region: no-drag;
+  width: 22px;
+  height: 22px;
 }
 .library .actions button:hover {
   background-color: #e0e0e0;
@@ -471,8 +483,9 @@ body[project-open="1"] .library {
 .library .actions .btn-add:hover {
   background-color: #E5E5E5;
 }
-.library .actions .ui-checkbox {
-  width: 30px;
+.library .actions .ui-checkbox .mdi {
+  width: 22px;
+  height: 22px;
 }
 .library .constant-items .item {
   position: relative;
@@ -601,12 +614,12 @@ body[project-open="1"] .library {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
   position: absolute;
   top: 0px;
   left: -25px;
@@ -696,7 +709,9 @@ body[project-open="1"] .library {
   margin: 3px;
   border: none !important;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
+  /*height: @button-width;
+    width: @button-height;*/
   padding: 5px 10px;
   background-color: white;
   border: none;
@@ -737,7 +752,9 @@ body[project-open="1"] .library {
   margin: 3px;
   border: none !important;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
+  /*height: @button-width;
+    width: @button-height;*/
   padding: 5px 10px;
   background-color: white;
   border: none;
@@ -820,12 +837,12 @@ body[project-open="1"] .library {
   border: none !important;
   outline: none;
   background-color: transparent;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
+  /*height: @button-width;
+    width: @button-height;*/
   transition: all ease-in-out 0.4s;
   padding: 0px;
-  height: 30px;
-  width: 30px;
   width: 20px;
   height: 20px;
   vertical-align: top;
