--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -1,5 +1,8 @@
-@button-width: 22px ;
-@button-height: 22px ;
+@button-width: 22px;
+@button-height: 22px;
+
+@svg-width: 12px;
+@svg-height: 12px;
 
 body{
     &[project-open="0"] {
@@ -32,6 +35,11 @@ body{
     button {
         width:@button-width;
         height:@button-height;
+    }
+
+    .mdi-svg {
+        width:@svg-width;
+        height:@svg-height;
     }
 
     .actionbuttons {
