--- a/src/includes/blanke-kit/blanke-ui.css
+++ b/src/includes/blanke-kit/blanke-ui.css
@@ -55,6 +55,7 @@
   background-color: transparent;
   font-size: 12px;
   cursor: pointer;
+  vertical-align: top;
   /*height: @button-width;
     width: @button-height;*/
   transition: all ease-in-out 0.4s;
@@ -65,6 +66,10 @@
 .ui-button:hover:disabled {
   background-color: transparent;
   cursor: default;
+}
+.ui-button .mdi-svg {
+  vertical-align: top;
+  text-align: center;
 }
 .ui-button-sphere {
   -webkit-touch-callout: none;
@@ -86,6 +91,7 @@
   background-color: transparent;
   font-size: 12px;
   cursor: pointer;
+  vertical-align: top;
   /*height: @button-width;
     width: @button-height;*/
   transition: all ease-in-out 0.4s;
@@ -97,6 +103,10 @@
 .ui-button-sphere:hover:disabled {
   background-color: transparent;
   cursor: default;
+}
+.ui-button-sphere .mdi-svg {
+  vertical-align: top;
+  text-align: center;
 }
 .ui-button-sphere:hover {
   border-radius: 100%;
@@ -119,6 +129,7 @@
   border: none !important;
   background-color: transparent;
   font-size: 12px;
+  vertical-align: top;
   /*height: @button-width;
     width: @button-height;*/
   padding: 5px 10px;
@@ -135,6 +146,10 @@
 .ui-button-rect:hover:disabled {
   background-color: transparent;
   cursor: default;
+}
+.ui-button-rect .mdi-svg {
+  vertical-align: top;
+  text-align: center;
 }
 .ui-button-rect:hover {
   border-radius: 4px;
@@ -179,16 +194,19 @@
   top: 0px;
   left: 0px;
 }
-.ui-checkbox input:not(:checked) + .mdi {
+.ui-checkbox input:not(:checked) + .mdi,
+.ui-checkbox input:not(:checked) + .mdi-svg {
   border-color: rgba(0, 0, 0, 0.2);
   border-style: dashed;
 }
-.ui-checkbox input:checked + .mdi {
+.ui-checkbox input:checked + .mdi,
+.ui-checkbox input:checked + .mdi-svg {
   border-color: black;
   border-style: solid;
   background-color: #e0e0e0;
 }
-.ui-checkbox .mdi {
+.ui-checkbox .mdi,
+.ui-checkbox .mdi-svg {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -203,7 +221,12 @@
   box-sizing: border-box;
   transition: all ease-in-out 0.2s;
 }
-.ui-checkbox:hover .mdi {
+.ui-checkbox .mdi-svg {
+  vertical-align: top;
+  text-align: center;
+}
+.ui-checkbox:hover .mdi,
+.ui-checkbox:hover .mdi-svg {
   background-color: #e0e0e0;
 }
 .ui-file > input {
