using asar packaging, much faster building and loading times

--- a/src/less/imports.less
+++ b/src/less/imports.less
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: "Inconsolata";
-    src: url("includes/fonts/inconsolata/inconsolata.otf") format("opentype");
+    src: url("./includes/fonts/inconsolata/Inconsolata.otf") format("opentype");
 }
 
 *{
