resizable library, Entity HC integration

--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -1,10 +1,19 @@
 @import "imports";
 
-.ui-settings {
+.ui-dialog-container {
+    margin-left: 200px;
     position: absolute;
     top: 34px;
     bottom: 0px;
-    left: 200px;
+    right: 0px;
+    left: 0px;
+}
+
+.ui-settings {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
     right: 0px;
     z-index: @ide-z-front;
     background: @ide-background;
