--- a/src/less/library.less
+++ b/src/less/library.less
@@ -30,10 +30,14 @@ body{
     background-color: #ffffff;
     /*box-shadow: 1px 0px 5px black;*/
     z-index: 20;
-    overflow: hidden;
-    overflow-y: auto;
+    overflow: auto;
 
     transition: all ease-in-out 0.2s;
+
+    >.ui-resizable-handle {
+    	right: 0px;
+    	width: 10px;
+    }
 
     .mdi-svg {
     	width: @lib-svg-width;
@@ -116,6 +120,7 @@ body{
 			width: 100%;
 			padding: 1px;
 			position: absolute;
+			box-sizing: border-box;
 		}
 
 		>.name {
