--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,13 +17,19 @@ body {
 	width: 100%;
 	height: 100%;
 
+	display: inline-block;
+
 	.workspace {
+		width: 100%;
 		height: 100%;
 		margin-left: 200px;
+		padding-right: 200px;
 		margin-top: 34px;
 	    padding-bottom: 34px;
 	    box-sizing: border-box;
 		z-index: @ide-z-back;
+
+		display: inline-block;
 	}
 }
 
