--- a/src/main.css
+++ b/src/main.css
@@ -460,9 +460,12 @@ body[project-open="1"] .library {
   background-color: #ffffff;
   /*box-shadow: 1px 0px 5px black;*/
   z-index: 20;
-  overflow: hidden;
-  overflow-y: auto;
+  overflow: auto;
   transition: all ease-in-out 0.2s;
+}
+.library > .ui-resizable-handle {
+  right: 0px;
+  width: 10px;
 }
 .library .mdi-svg {
   width: 14px;
@@ -589,6 +592,7 @@ body[project-open="1"] .library {
   width: 100%;
   padding: 1px;
   position: absolute;
+  box-sizing: border-box;
 }
 .library .object-tree > .name {
   position: relative;
@@ -741,11 +745,19 @@ body[project-open="1"] .library {
   height: 100%;
   cursor: default;
 }
-.ui-settings {
+.ui-dialog-container {
+  margin-left: 200px;
   position: absolute;
   top: 34px;
   bottom: 0px;
-  left: 200px;
+  right: 0px;
+  left: 0px;
+}
+.ui-settings {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
   right: 0px;
   z-index: 20;
   background: #FFFFFF;
@@ -961,14 +973,18 @@ body {
   margin: 0px;
   width: 100%;
   height: 100%;
+  display: inline-block;
 }
 body .workspace {
+  width: 100%;
   height: 100%;
   margin-left: 200px;
+  padding-right: 200px;
   margin-top: 34px;
   padding-bottom: 34px;
   box-sizing: border-box;
   z-index: -20;
+  display: inline-block;
 }
 ::selection {
   background: #80deea;
